--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   web:
     build: .
-    command: bash -c "bundle exec rspec & bundle exec cucumber"
+    command: bash -c "bundle exec rspec && bundle exec cucumber"
     volumes:
       - .:/code/Ruby-Docker
       - /Users/cleicar/ssl/certs:/etc/nginx/certs
